--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>MBMeftahi</title>
+       <title>Hi, I am MBMeftahi</title>
     </head>
     <body>
         <nav>
@@ -13,5 +13,8 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
+          <h1>Hello, My name is Mohammad B. Meftahi</h1>
+          <img  style="border-radius: 50%; float: right; margin-right: lem;" src="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64" alt="MBMeftahi">
+          <p> I am experinced system enginer; curently attending full stack training at Microtrain  to extend my coding capability. I would like to be able to develop websites and api's and also created utilities and tools to automate back end activities of system admins.</p>
     </body>
 </html>
