--- a/contact.html
+++ b/contact.html
@@ -13,5 +13,27 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
+          <form action="https://formspree.io/mmeftahi@hotmail.com" method="POST">
+            <input type="hidden" name="_next" value="https://mbmeftahi.github.io/thanks.html">   
+            <input type="text" name="_gotcha" style="Display:none">
+            <div>
+              <label for="name">Name</label>
+              <input id="name" type="text" name="name">
+            </div>
+            <div>
+              <label for="email">Email</label>
+              <input id="email" type="text" name="_replyto" >
+            </div>
+            <div>
+                <label for="message">Message</label>
+                <textarea id="message" type="text" name="message"> </textarea>            
+            </div>
+            <div>
+              <input type="hidden" name="_subject" value="new submission!" >
+            </div>
+            <div>
+              <input type="submit" value="send">
+            </div>
+          </form>
     </body>
 </html>
