update resume page

--- a/resume.html
+++ b/resume.html
@@ -63,8 +63,8 @@
         </div>
         <div>
         <h2>EDUCATION</h2>
-        DeVry University – Chicago, IL  2011 – 2015
-        Bachelor of Science in Computer Information Systems
+        Northern Illinois University – Dekalb, IL 
+        Bachelor of Science in Mechanical Engineering
         </div>
         </div>
         MicroTrain Technologies – Chicago, IL  2015
