adding new files to site and updating pages

--- a/index.html
+++ b/index.html
@@ -4,17 +4,47 @@
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>Hi, I am MBMeftahi</title>
+       <meta name="description" content="home page">
+       <meta name="keywords" content="system engineer,full stack development">
+       <!--
+        <meta name="msapplication-config" content="browserconfig.xml" />
+        <link rel="author" href="humans.txt" />
+        -->
+       <link rel="shortcut icon"  href="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64">
+       <link rel="stylesheet" type="text/css" href="./dist/css/main.css">
     </head>
     <body>
-        <nav>
+      <header>
+        <span class="logo">My Website</span>
+        <a id="toggleMenu">Menu<a>
+          <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="resume.html">Resume</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
-          <h1>Hello, My name is Mohammad B. Meftahi</h1>
-          <img  style="border-radius: 50%; float: right; margin-right: 1em;" src="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64" alt="MBMeftahi">
-          <p> I am experinced system engineer; curently attending full stack training at Microtrain  to extend my coding capability. I would like to be able to develop websites and api's and also created utilities and tools to automate back end activities of system admins.</p>
+      </header>
+      <main>
+          <h1>Hello, My name is Mohammad Meftahi</h1>
+          <img  class="avitar" src="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64" alt="MBMeftahi">
+          <p> I am system engineer; curently attending full stack training at Microtrain  to extend my coding capability. I would like to be able to develop websites and api's and also created utilities and tools to automate back end activities of system admins.</p>
+        </main>
+
+<script>
+    var toggleMenu = document.getElementById('toggleMenu');
+    var nav = document.querySelector('nav');
+    toggleMenu.addEventListener(
+      'click',
+      function(){
+        if(nav.style.display=='block'){
+          nav.style.display='none';
+        }else{
+          nav.style.display='block';
+        }
+      }
+    );
+</script>
+        
     </body>
 </html>
