fix typo in resume

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
       </section>
       <main>
         <h4>Mohammad Meftahi</h4>
-        <h4> ● Glen Ellyn IllinoisStreet Address  ● 630-956-6133 ● mmeftahi@hotmail.com</h4>
+        <h4> ● Glen Ellyn Illinois  ● 630-956-6133 ● mmeftahi@hotmail.com</h4>
         <h2>Full Stack Web and Hybrid Mobile Applications Developer</h2>
         <div>
           Full stack web and hybrid mobile applications developer specializing in full stack JavaScript application
