--- a/resume.html
+++ b/resume.html
@@ -7,22 +7,36 @@
       <meta name="description" content="resume page">
       <meta name="keywords" content="resume,system engineer,full stack">
       <link rel="shortcut icon"  href="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64">
-      <link rel="stylesheet" type="text/css" href="./dist/css/main.css">
+      <!-- <link rel="stylesheet" type="text/css" href="./dist/css/main.css"> -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
   </head>
   <body>
-      <section>
-        <header>
-          <span class="logo">My Background</span>
-          <a id="toggleMenu">Menu<a>
-            <nav>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </nav>
-        </header>
-      </section>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">LOGO</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="resume.html">Resume</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="contact.php">ContactUS</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
+
       <main>
         <h4>Mohammad Meftahi</h4>
         <h4> ● Glen Ellyn Illinois  ● 630-956-6133 ● mmeftahi@hotmail.com</h4>
@@ -36,21 +50,21 @@
           <li>Outstanding leadership abilities; able to coordinate and direct all phases of project-based efforts.</li>
         </div>
         <h3>Core Competencies</h3>
-        <div>
-          ◦ Full Stack Development
-          ◦ Hybrid Mobile Development
-          ◦ Strong Analytical Skills
-          ◦ Savvy Problem Solver
-          ◦ Prioritizes Tasks
-          ◦ Strong Leadership Skills
+        <div class="gridcore">
+          <div class="col-1">&#x25CF Stack Development</div>
+          <div class="col-2">&#x25CF Hybrid Mobile Development</div>
+          <div class="col-3">&#x25CF Strong Analytical Skills</div>
+          <div class="col-21">&#x25CF Savvy Problem Solver</div>
+          <div class="col-22">&#x25CF Prioritizes Tasks</div>
+          <div class="col-23">&#x25CF Strong Leadership Skills</div>
         </div>  
         <h2>CERTIFICATIONS / TECHNICAL PROFICIENCIES</h2>
         <div>
-          Certifications: Agile Certified Scrum Master
-          Platforms ​ : Linux, Windows, Mac, LAMP, MEAN, NodeJS
-          Database: MySQL, MongoDB
-          Tools: VS Code, SSH, Gulp, Git
-          Languages: HTML, CSS, SASS, JavaScript, ES6, PHP, Bash, SQL
+          <div>Certifications: Agile Certified Scrum Master</div>
+          <div>Platforms ​ : Linux, Windows, Mac, LAMP, MEAN, NodeJS</div>
+          <div>Database: MySQL, MongoDB</div>
+          <div>Tools: VS Code, SSH, Gulp, Git</div>
+          <div>Languages: HTML, CSS, SASS, JavaScript, ES6, PHP, Bash, SQL</div>
         </div>
         <h2>PROFESSIONAL EXPERIENCE</h2>
         <section>
@@ -102,5 +116,8 @@
       }
     );
 </script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>        
     </body>
 </html>
